--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-repeat: no;
     display: inline-block;
     height: 90%;
-    width: 50%;
+    width: 820px;
     border-radius: 4%;
     border: black solid 3px;
 }
